--- a/myfolio/templates/index.html
+++ b/myfolio/templates/index.html
@@ -173,7 +173,18 @@
 						<p>I like Moder Colors and Designs!</p>
 					</div>
                 </div><!-- end col -->
-
+                <div class="col-md-4">
+                    <div class="services-inner-box">
+                        <div class="ser-icon">
+                            <i class="flaticon-process"></i>
+                        </div>
+                        <h2>Projects Apps</h2>
+                        <p>C Sharp Apps, Python apps</p>
+                        <p>Download My App MTE</p>
+                        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" href = "{% static '/apps/mte.exe' %}">
+                        Download</button>
+                    </div>
+                </div>
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
