--- a/underbuild/templates/under.html
+++ b/underbuild/templates/under.html
@@ -37,7 +37,7 @@
 			</h3>
 
 			<p class="m2-txt1 txt-center p-b-48">
-				Our website is under construction, follow us for update now!
+				The Apps page is under construction, come back after few days!
 			</p>
 
 			<div class="flex-w flex-c-m cd100 p-b-33">
