--- a/land/templates/land.html
+++ b/land/templates/land.html
@@ -52,7 +52,7 @@ Template Re-distribution is NOT allowed.
                	    	<div class="row form-section">
 
 							<div class="col-md-5 col-sm-5 col-xs-5">
-								<a href="{% url 'underbuild' %}" class="tm-btn-subscribe">Apps</a>
+								<a href="{% url 'apps' %}" class="tm-btn-subscribe">Apps</a>
 							</div>
 							<br/>
 							<br/>
