--- a/myfolio/templates/home.html
+++ b/myfolio/templates/home.html
@@ -59,12 +59,12 @@
 
       <nav class="nav-menu">
         <ul>
-        <li class="active"><a href="{% url 'home' %}"><i class="bx bx-home"></i> <span>Welcome</span></a></li>
-          <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#skills"><i class="bx bx-user"></i> <span>Skills</span></a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+        <li class="active"><a href="{% url 'home' %}"><i class="bx bxs-like bx-flashing"></i> <span>Welcome</span></a></li>
+          <li class="active"><a href="#hero"><i class="bxs bx-home bx-flashing"></i> <span>Home</span></a></li>
+          <li><a href="#about"><i class="bx bxs-user bx-flashing"></i> <span>About</span></a></li>
+          <li><a href="#skills"><i class="bx bxs-user bx-flashing"></i> <span>Skills</span></a></li>
+          <li><a href="#services"><i class="bx bxs-server bx-flashing"></i> Services</a></li>
+          <li><a href="#contact"><i class="bx bxs-envelope bx-flashing"></i> Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
